# warp-field-coils

./: .gitignore  ARTIFICIAL_GRAVITY_FIELD_COIL_INTEGRATION.md  COMMIT_AND_PUSH_SUMMARY.md  COMPREHENSIVE_MILESTONE_ANALYSIS.md  CONTRIBUTING.md  DOCUMENTATION_WRAP_UP_COMPLETE.md  ELECTROMAGNETIC_COUPLING_ANALYSIS.md  ENHANCED_FIELD_COILS_IMPLEMENTATION.md  ENHANCED_FRAMEWORK_INTEGRATION_COMPLETE.md  ENHANCED_UQ_RESOLUTION_FINAL_SUMMARY.md  FINAL_PRODUCTION_SUMMARY.md  FINAL_VALIDATION_REPORT.md  GIT_COMMIT_SUMMARY.md  INTEGRATION_MILESTONE_COMPLETE.md  INTEGRATION_UQ_COMPLETION_REPORT.md  IN_SILICO_IMPLEMENTATION_GUIDE.md  LQG_IMPLEMENTATION_COMPLETE.md  MEDICAL_IMPLEMENTATION_SUMMARY.md  MILESTONES_AND_MEASUREMENTS.md  MISSION_ACCOMPLISHED_REPORT.md  PRIORITY_0_BLOCKING_CONCERNS_RESOLVED.md  PROGRESS_LOG.md  README.md  SECURITY.md  TESTS_COMPLETE.txt  TEST_RESULTS_SUMMARY.md  UQ-TODO-RESOLVED.ndjson  UQ-TODO.ndjson  UQ-TODO.ndjson.backup  UQ_RESOLUTION_REPORT.md  VnV-TODO.ndson  WARP_TECHNOLOGY_INTEGRATION_COMPLETE.md  control_loop_interaction_validation_report.md  critical_uq_validation_report.json  demo_enhanced_lqg_control.py  enhanced_field_coils_demo.py  enhanced_subspace_uq_results.json  fix_indentation.py  lqg_trajectory_controller_test_results.json  minimal_vscode_test.py  (+32 more)
.github/: README.md
demos/: basic_field_optimization.py
docs/: CAUSALITY_PRESERVATION_ANALYSIS.md  COMMIT_AND_PUSH_SUMMARY.md  COMPREHENSIVE_MILESTONE_ANALYSIS.md  CRITICAL_UQ_RESOLUTION_PLAN.md  CROSS_REPOSITORY_DOCUMENTATION_INDEX.md  DEPLOYMENT_STATUS.md  ENHANCED_SYSTEM_STATUS.md  (+30 more)
(+112 files in other folders)
