[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warp_field_coils"
version = "0.1.0"
description = "Warp Field Coils - Metric generation and control"
readme = "README.md"
authors = [
  { name = "Warp Drive Research Team" }
]
dependencies = [
  "numpy>=1.21",
  "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["control"]
